# hpxcl

./: .gitignore  CIATATION.bib  CITATION.cff  CMakeLists.txt  HPXCLConfig.cmake.in  HPXCLConfigVersion.cmake.in  README.md  TODO.txt  circle.yml  cuda.hpp  format.sh  hpx_cuda.hpp  index.html  opencl.hpp  params.json
benchmark/: CMakeLists.txt  DgemmScript.py  PartitionScript.py  SmvpScript.py  StencilScript.py  plot.py
benchmark/cuda/: CMakeLists.txt
benchmark/cuda/benchmark_vector/: BenchmarkCUDA.cu  benchmarkSingleHPX.sh  config.hpp  kernel.cu  utils.hpp
benchmark/cuda/dgemm/: CMakeLists.txt  dgemm.cu  dgemmCUDA.cu  dgemmHPX.cpp  dgemmHPXCL.cpp  validation.h  validation.hpp
benchmark/cuda/smvp/: CMakeLists.txt  smvp.cu  smvpCUDA.cu  smvpHPX.cpp  smvpHPXCL.cpp  validation.h
benchmark/cuda/stencil/: CMakeLists.txt  PartitionCUDA.cu  PartitionCUDAMultiDevice.cu  PartitionHPX.cpp  PartitionHPXMultiDevice.cpp  StencilCUDA.cu  StencilHPX.cpp  config.hpp  kernel.cu  stencil_kernel.cu  utils.hpp
benchmark/cuda/stream/: CMakeLists.txt  StreamHPX.cpp  kernels.cu
benchmark/opencl/: CMakeLists.txt
benchmark/opencl/dgemm/: CMakeLists.txt  dgemm.cl  dgemmCL.c  dgemmCUDA.c  dgemmHPX.cpp
benchmark/opencl/smvp/: CMakeLists.txt  smvp.cl  smvpCL.c  smvpHPX.cpp
benchmark/opencl/stencil/: CMakeLists.txt  partition.c  partitionKernel.cl  stencil.c  stencil.h  stencilKernel.cl
benchmark/opencl/stream/: CMakeLists.txt  stream.c  streamKernel.cl
cuda/: CMakeLists.txt  CudaErrorHandling.hpp  Makefile  buffer.cpp  buffer.hpp  client.cpp  cmake_install.cmake  compile  cuda_error_handling.cpp  cuda_error_handling.hpp  device.cpp  device.hpp  event.hpp  export_definitions.hpp  fwd_declarations.hpp  get_devices.cpp  get_devices.hpp  hpxcl.files  kernel.cpp  kernel.hpp  managed_cuda_component_client.cpp  program.cpp  program.hpp  std.hpp  test.cpp  todo.lst  tools.cpp  tools.hpp
cuda/cuda/: kernel.cu  kernel.cuh
cuda/cuda_components/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  event.cpp  event.hpp  fwd_declarations.hpp  kernel.cpp  kernel.hpp  managed_cuda_component.cpp  managed_cuda_component.hpp
cuda/cuda_components/cuda/: .kernel.cu.swp  kernel.cu  kernel.cuh
cuda/cuda_components/server/: buffer.hpp  device.hpp  event.hpp  kernel.hpp  managed_cuda_component.hpp
cuda/cuda_components/stubs/: buffer.hpp  device.hpp  event.hpp  kernel.hpp  managed_cuda_component.hpp
cuda/lcos/: event.cpp  event.hpp  zerocopy_buffer.hpp
cuda/server/: buffer.cpp  buffer.hpp  buffer_server.cpp  device.cpp  device.hpp  device_server.cpp  event.cpp  event.hpp  get_devices.cpp  get_devices.hpp  get_devices_server.cpp  kernel.cpp  kernel.hpp  kernel_server.cpp  program.cpp  program.hpp  program_server.cpp  std.cpp  std.hpp
cuda/server/util/: data_map.cpp  data_map.hpp  event_dependencies.cpp  event_dependencies.hpp  event_map.cpp  event_map.hpp
cuda/stubs/: buffer.hpp  device.hpp  kernel.hpp  program.hpp
docs/: CMakeLists.txt  autodoc.doxy.in  doxy-config-opencl  hpxcl.qbk
docs/html/: annotated.html  buffer_8hpp_source.html  build_kernel_8cpp-example.html  build_kernel_from_file_8cpp-example.html  classes.html  classhpx_1_1cuda_1_1buffer-members.html  classhpx_1_1cuda_1_1buffer.html  classhpx_1_1cuda_1_1device-members.html  classhpx_1_1cuda_1_1device.html  classhpx_1_1cuda_1_1program-members.html  classhpx_1_1cuda_1_1program.html  classhpx_1_1opencl_1_1buffer-members.html  classhpx_1_1opencl_1_1buffer.html  classhpx_1_1opencl_1_1device-members.html  classhpx_1_1opencl_1_1device.html  classhpx_1_1opencl_1_1kernel-members.html  classhpx_1_1opencl_1_1kernel.html  classhpx_1_1opencl_1_1program-members.html  classhpx_1_1opencl_1_1program.html  cuda_2buffer_8hpp_source.html  cuda_2device_8hpp_source.html  cuda_2program_8hpp_source.html  cuda_8hpp_source.html  cuda_list_devices_8cpp-example.html  device_8hpp_source.html  examples.html  files.html  functions.html  functions_func.html  get__devices_8hpp_source.html  hello_world_8cpp-example.html  index.html  kernel_8hpp_source.html  opencl_2buffer_8hpp_source.html  opencl_2device_8hpp_source.html  opencl_2program_8hpp_source.html  opencl_8hpp_source.html  program_8hpp_source.html  streams_8cpp-example.html  structhpx_1_1opencl_1_1buffer_1_1send__result-members.html  (+3 more)
docs/html/search/: all_62.js  all_63.js  all_64.js  all_67.js  all_70.js  all_73.js  all_77.js  classes_62.js  classes_73.js  functions_62.js  functions_65.js  functions_72.js  functions_73.js  search.js
docs/manual/build_system/: cmake_toolchains.qbk
docs/opencl/: annotated.html  buffer_8hpp_source.html  classes.html  classhpx_1_1opencl_1_1buffer-members.html  classhpx_1_1opencl_1_1buffer.html  classhpx_1_1opencl_1_1device-members.html  classhpx_1_1opencl_1_1device.html  classhpx_1_1opencl_1_1event-members.html  classhpx_1_1opencl_1_1event.html  classhpx_1_1opencl_1_1kernel-members.html  classhpx_1_1opencl_1_1kernel.html  classhpx_1_1opencl_1_1program-members.html  classhpx_1_1opencl_1_1program.html  device_8hpp_source.html  dir_3c69c44e2a3422d47d59ead424f1f0d0.html  dir_e14bbf444359d91d4e1df8302009f56a.html  event_8hpp_source.html  files.html  functions.html  functions_func.html  fwd__declarations_8hpp_source.html  hpx__cl__interop_8hpp_source.html  index.html  kernel_8hpp_source.html  namespacehpx_1_1opencl.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  program_8hpp_source.html  server_2buffer_8hpp_source.html  server_2device_8hpp_source.html  server_2event_8hpp_source.html  server_2kernel_8hpp_source.html  server_2program_8hpp_source.html  server_2std_8hpp_source.html  std_8hpp_source.html  structhpx_1_1opencl_1_1work__size-members.html  structhpx_1_1opencl_1_1work__size.html  tools_8hpp_source.html
docs/opencl/search/: all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_70.js  all_74.js  classes_62.js  search.js  (+8 more)
examples/opencl/: CMakeLists.txt  _tmp_test.cpp  events_and_futures.cpp  hello_world.cpp  list_devices.cpp  reference_bug.cpp
test/: CMakeLists.txt  opencl_client.cpp
tests/performance/: CMakeLists.txt
(+201 files in other folders)
